# aoi-mapper

./: .gitignore  README.md  pyproject.toml
aoi_mapper/: depthEstimation.ipynb
opencv_saliency_examples/: main.py
saliency_mapper/: saliencyMapping.ipynb
saliency_mapper/notebooks/: Non_deep_learning_segmentation.ipynb  backgroundRemoval.ipynb  depthEstimation.ipynb  saliencyMapping.ipynb  salinecyMapper.ipynb  segmentation.ipynb
