[tool.poetry]
name = "aoi-mapper"
version = "0.1.0"
description = "Tools to generate the area of interest maps of images"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.6.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
progress = "^1.6"
timm = "^0.6.7"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
